--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "esnext",
     "lib": ["dom", "es2015", "esnext"],
     "jsx": "react-jsx",
-    "module": "esnext",
+    "module": "node16",
     "moduleResolution": "node16",
     "strict": true,
     "esModuleInterop": true,
